--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <a href="Decker-C-Resume-April-2025.pdf">📄 My Resume (PDF)</a>
                 <p class="link-description">A detailed overview of my professional experience, skills, and education.</p>
                 
-                <a href="https://cpainter7362.github.io/final-project">🚀 My Final Project</a>
+                <a href="https://cpainter7362.github.io/playground/">🚀 My Final Project</a>
                 <p class="link-description">Check out my final project for this course.</p>
                 
                 <a href="https://www.linkedin.com/in/cara-epperly">💼 LinkedIn Profile</a>
