--- a/index.html
+++ b/index.html
@@ -92,15 +92,21 @@
 
         <div class="content">
             <div class="profile-info">
-                <h2>About Me</h2>
+                   <h2>About Me</h2>
                 <p>
                     I'm a data analyst with experience in human resources management and a growing passion 
                     for information technology and full stack development. I combine analytical thinking with 
                     technical skills to drive process improvements and deliver data-driven insights.
                 </p>
                 <p>
-                    Currently pursuing an Associate's degree in Information Technology with a specialization in 
-                    Full Stack Development while working as an Employee Administration Data Analyst at Virginia Tech.
+                    I hold a Bachelor of Arts in Human Resources Management from Liberty University (2021) and am 
+                    currently pursuing an Associate's degree in Information Technology with a specialization in 
+                    Full Stack Development at New River Community College while working as an Employee Administration 
+                    Data Analyst at Virginia Tech.
+                </p>
+                <p>
+                    My background in HR combined with my technical skills allows me to bridge the gap between 
+                    business needs and technical solutions, particularly in data analysis and process improvement.
                 </p>
             </div>
             
